# snow

./: .gitattributes  .gitignore  CMakeLists.txt  build_lin.sh  build_lin_models.sh  build_win.cmd  build_win_models.cmd  download_lin.sh  download_win.cmd  launch_lin.sh  launch_win.cmd
core/: CMakeLists.txt  application.cpp  application.h  com_initialization.h  command.h  error.cpp  error.h  file.cpp  file.h  format_exception.cpp  format_exception.h  hash.h  macro.h  module.cpp  module.h  queue.h  queue_item_processor.h  queue_processor.h  scoped_handle.h  signal_dispatcher.cpp  signal_dispatcher.h  spinlock_mutex.h  string_utils.cpp  string_utils.h  thread_pool.cpp  thread_pool.h  timer_queue.h  timestamp.cpp  timestamp.h  tracer.cpp  tracer.h
core/lin/: lin_module.cpp  lin_spinlock_mutex.h  lin_thread_pool.cpp
core/osx/: osx_com_initialization.cpp  osx_image.cpp  osx_image.h  osx_thread_pool.cpp  osx_thread_pool.h  osx_timer_queue.cpp  osx_timer_queue.h
core/win/: win_access_token.cpp  win_access_token.h  win_com_initialization.cpp  win_handle.h  win_handle_detail.h  win_hr.cpp  win_hr.h  win_image.cpp  win_image.h  win_module.cpp  win_spinlock_mutex.h  win_thread_pool.cpp  win_thread_pool.h  win_timer_queue.cpp  win_timer_queue.h
documentation/: sites.txt
documentation/Apple/: AppKit Framework.txt  Cocoa_Core_motion.txt  Cocoa_Exception.txt  Cocoa_Memory_managemen.txt  Cocoa_Thread_management.txt  Grand Central Dispatch.txt  Interface builder.txt  Metal Shading Language Guide.txt  MetalKit_Framework.txt  Model-View-Controller.txt  Objective-C.txt  Scheduling Timed Jobs.txt  SpriteKit.txt  UICollectionView.txt  UIKit_Framework.txt  WebKit Objective-C Programming Guide.txt  XCode.txt  blocks.txt  hot_key.txt  hot_key_!.txt  iOS.txt  links.txt  plist.txt  Некоторые_записки.txt
documentation/Apple/app_signing/: certificate_loading.txt
documentation/Apple/stanford/: stanford_link.txt
documentation/Microsoft/: About Window Stations and Desktops.txt
documentation/cmake/: find.cmake
documentation/http_responsive_templates/: links.txt
network/: CMakeLists.txt  buffer.h  interface_enumerator.h  io_queue.cpp  io_queue.h  io_queue_handler.cpp  io_queue_handler.h  resource_initialization.h  socket.h  socket_context.h  socket_handler.h
network/lin/: lin_socket.cpp  lin_socket.h
network/osx/: osx_socket.cpp  osx_socket.h
network/win/: win_interface_enumerator.cpp  win_interface_enumerator.h  win_resource_initialization.cpp  win_resource_initialization.h  win_socket.cpp  win_socket.h  win_socket_handler.cpp  win_socket_handler.h
pwrp/: converters.cpp  converters.h  zip_archive.cpp  zip_archive.h
pwrp/osx/: osx_icon.cpp  osx_icon.h
pwrp/win/: win_icon.cpp  win_icon.h
research/core_test/: CMakeLists.txt  application.cpp  application.h  entry_point.cpp  test_thread_pool.cpp  test_thread_pool.h
research/gtest/: CMakeLists.txt  description.rc  entry_point.cpp
research/stream_client/: CMakeLists.txt  description.rc  entry_point.cpp  stream_client.cpp  stream_client.h
research/stream_server/: CMakeLists.txt  entry_point.cpp  stream_server.cpp  stream_server.h
script/: download_external_project.cmake  ensure_output_path.cmake  ensure_staic_linkage.cmake  gather_source_files.cmake  generate_version_file.cmake  set_compilation_flags.cmake
script/download/: CMakeLists.txt
script/fixture/: CMakeLists.txt
